# EchoFlow

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
src/: main.py
src/app/: __init__.py  app_container.py
src/core/: .env  __init__.py  config.py  file_manager.py  file_manager_facade.py  health_check.py  ilogger.py  logger.py  logger_config.py  logger_factory.py  performance_tracker.py
src/interfaces/: __init__.py  base_file_manager.py  cloud_file_manager.py  ifile_utility.py  local_file_manager.py
src/utils/: __init__.py  datetime_utilities.py  file_utils.py  yaml_util.py
tests/: __init__.py  test_app_container.py  test_config.py  test_file_manager.py  test_health_check.py  test_logger.py  test_main.py  test_performance_tracker.py
tests/app/: test_app_container.py
tests/core/: test_config.py  test_file_manager.py  test_file_manager_facade.py  test_health_check.py  test_ilogger.py  test_logger.py  test_logger_config.py  test_performance_tracker.py
tests/interfaces/: __init__.py  test_base_file_manager.py  test_ifile_utility.py  test_local_file_manager.py
tests/utils/: test_datetime_utilities.py  test_file_utils.py  test_yaml_util.py
